update something new

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -27,7 +27,7 @@
       </div>
     </div>
     <div
-      class="w-full max-w-md sm:bg-surface sm:p-8 sm:py-10 sm:rounded sm:sm:border border-solid border-light"
+      class="w-full max-w-md sm:bg-surface sm:p-8 sm:py-10 sm:rounded-md sm:sm:border-2 border-solid border-light"
     >
       <div class="font-medium text-2xl text-center">
         {{ "Login.Title" | translate }}
