--- a/src/app/layout/layouts/student/student.component.html
+++ b/src/app/layout/layouts/student/student.component.html
@@ -1,4 +1,6 @@
-<div class="w-full h-full overflow-hidden flex flex-col relative bg-gray-100">
+<div
+  class="w-full h-full overflow-hidden flex flex-col relative bg-primary-50 bg-opacity-80"
+>
   <!-- Header -->
   <student-header></student-header>
   <!-- Main -->
