--- a/src/app/layout/layouts/tutor/components/header/header.component.html
+++ b/src/app/layout/layouts/tutor/components/header/header.component.html
@@ -3,7 +3,7 @@
 >
   <div class="flex justify-center items-center gap-2">
     <a
-      class="font-semibold  text-lg hover:no-underline cursor-pointer select-none"
+      class="font-semibold text-lg hover:no-underline cursor-pointer select-none text-default"
       routerLink="/tutor/home"
       >Vietspeak</a
     >
