--- a/src/app/modules/admin/account/account.component.html
+++ b/src/app/modules/admin/account/account.component.html
@@ -1,4 +1,7 @@
 <div class="flex flex-col w-full overflow-hidden max-w-5xl mx-auto">
+  <app-breadcrumb
+    class="block font-medium text-2xl w-full mb-6"
+  ></app-breadcrumb>
   <div class="flex-grow flex-wrap flex gap-10">
     <div class="flex flex-col w-60 flex-shrink-0">
       <!-- <div class="font-medium  text-2xl mb-4">
