--- a/src/app/modules/admin/users/user-profile/student-profile/student-profile.component.html
+++ b/src/app/modules/admin/users/user-profile/student-profile/student-profile.component.html
@@ -1,7 +1,7 @@
 <div class="w-full">
   <form [formGroup]="studentProfileForm" class="flex flex-col gap-4">
     <div
-      class="w-full flex flex-col bg-surface rounded p-6 border border-solid border-light"
+      class="w-full flex flex-col bg-surface rounded p-6 border-2 border-solid border-light"
     >
       <div class="font-medium text-xl mb-3">
         {{ "StudentProfile.Basic" | translate }}
@@ -161,7 +161,7 @@
       </mat-form-field>
     </div>
     <div
-      class="w-full flex flex-col bg-surface rounded p-6 border border-solid border-light"
+      class="w-full flex flex-col bg-surface rounded p-6 border-2 border-solid border-light"
     >
       <div class="font-medium text-xl mb-3">
         {{ "StudentProfile.Learning" | translate }}
@@ -236,7 +236,7 @@
       </mat-form-field>
     </div>
     <div
-      class="w-full flex flex-col bg-surface rounded p-6 pb-2 border border-solid border-light"
+      class="w-full flex flex-col bg-surface rounded p-6 pb-2 border-2 border-solid border-light"
     >
       <div class="font-medium text-xl mb-3">
         {{ "StudentProfile.SupplementalInfo" | translate }}
