--- a/src/app/modules/under-review/under-review.component.html
+++ b/src/app/modules/under-review/under-review.component.html
@@ -16,7 +16,7 @@
     </div>
 
     <div
-      class="w-full max-w-md sm:bg-surface p-8 py-10 sm:rounded sm:sm:border border-solid border-light"
+      class="w-full max-w-md sm:bg-surface p-8 py-10 sm:rounded sm:sm:border-2 border-solid border-light"
     >
       <div
         class="font-medium  text-2xl text-center mb-4 flex flex-col gap-3 items-center justify-center"
