--- a/src/app/modules/admin/account/change-password/change-password.component.html
+++ b/src/app/modules/admin/account/change-password/change-password.component.html
@@ -4,10 +4,8 @@
     (ngSubmit)="submit()"
     class="flex flex-col gap-4"
   >
-    <div
-      class="bg-surface rounded p-6 pb-2 border border-solid border-light"
-    >
-      <div class="font-medium  text-xl mb-3">
+    <div class="bg-surface rounded p-6 border-2 border-solid border-light">
+      <div class="font-medium text-xl mb-3">
         {{ "ChangePassword.Title" | translate }}
       </div>
 
@@ -151,26 +149,26 @@
           }}
         </mat-error>
       </mat-form-field>
-    </div>
-    <div class="flex justify-center">
-      <button
-        type="submit"
-        class="btn--lg w-full"
-        mat-flat-button
-        [color]="'primary'"
-        [disabled]="changePasswordForm.disabled"
-      >
-        <span *ngIf="!changePasswordForm.disabled">
-          {{ "Action.Change" | translate }}
-        </span>
-
-        <mat-progress-spinner
-          *ngIf="changePasswordForm.disabled"
-          [diameter]="24"
-          mode="indeterminate"
+      <div class="flex justify-center">
+        <button
+          type="submit"
+          class="btn--lg w-full"
+          mat-flat-button
+          [color]="'primary'"
+          [disabled]="changePasswordForm.disabled"
         >
-        </mat-progress-spinner>
-      </button>
+          <span *ngIf="!changePasswordForm.disabled">
+            {{ "Action.ChangePassword" | translate }}
+          </span>
+
+          <mat-progress-spinner
+            *ngIf="changePasswordForm.disabled"
+            [diameter]="24"
+            mode="indeterminate"
+          >
+          </mat-progress-spinner>
+        </button>
+      </div>
     </div>
   </form>
 </div>
