--- a/src/app/modules/client/onboarding/tutor-info/tutor-info.component.html
+++ b/src/app/modules/client/onboarding/tutor-info/tutor-info.component.html
@@ -58,7 +58,7 @@
                       {{ "TutorProfile.ProfilePicture" | translate }}
                     </div>
                     <div
-                      class="rounded border border-solid bg-surface border-base p-4 flex flex-col"
+                      class="rounded border-2 border-solid bg-surface border-light p-4 flex flex-col"
                     >
                       <div
                         class="flex flex-col items-center gap-3 items-center"
@@ -394,7 +394,7 @@
                           let language of languagesFormArray.controls;
                           let i = index
                         "
-                        class="flex items-center flex-wrap md:flex-nowrap gap-x-3 rounded border border-base border-solid px-3 py-2 bg-surface relative"
+                        class="flex items-center flex-wrap md:flex-nowrap gap-x-3 rounded border-2 border-light border-solid px-3 py-2 bg-surface relative"
                         [formGroupName]="i"
                       >
                         <div class="flex-grow">
@@ -500,7 +500,7 @@
                     </div>
                     <div class="flex flex-col">
                       <div
-                        class="rounded border border-solid bg-surface border-base p-4 flex flex-col gap-2 items-center justify-center relative"
+                        class="rounded border-2 border-solid bg-surface border-light p-4 flex flex-col gap-2 items-center justify-center relative"
                         [ngClass]="
                           isOnDropFilesContainer
                             ? '!border-primary !bg-gray-50'
@@ -547,7 +547,7 @@
                         "
                       >
                         <div
-                          class="bg-surface rounded flex gap-4 items-center px-3 py-2 border border-solid border-base"
+                          class="bg-surface rounded flex gap-4 items-center px-3 py-2 border-2 border-solid border-light"
                           *ngFor="
                             let file of this.tutorExperienceForm.get(
                               'teachingCertificates'
@@ -688,7 +688,7 @@
                       {{ "TutorProfile.VideoIntroduction" | translate }}
                     </div>
                     <div
-                      class="p-3 rounded bg-surface border border-solid border-base"
+                      class="p-3 rounded bg-surface border-2 border-solid border-light"
                     >
                       <div class="mb-3 text-gray-600">
                         {{
