--- a/src/app/modules/client/student/account/user-profile/user-profile.component.html
+++ b/src/app/modules/client/student/account/user-profile/user-profile.component.html
@@ -1,7 +1,7 @@
 <div class="w-full">
   <form [formGroup]="studentProfileForm" class="flex flex-col gap-4">
     <div
-      class="w-full flex flex-col bg-surface rounded p-6 border border-solid border-light"
+      class="w-full flex flex-col bg-surface rounded p-6 border-2 border-solid border-light"
     >
       <div class="font-medium text-xl mb-3">
         {{ "StudentProfile.Basic" | translate }}
@@ -164,7 +164,7 @@
       </mat-form-field>
     </div>
     <div
-      class="w-full flex flex-col bg-surface rounded p-6 border border-solid border-light"
+      class="w-full flex flex-col bg-surface rounded p-6 border-2 border-solid border-light"
     >
       <div class="font-medium text-xl mb-3">
         {{ "StudentProfile.Learning" | translate }}
