--- a/src/app/modules/client/tutor/account/user-profile/user-profile.component.html
+++ b/src/app/modules/client/tutor/account/user-profile/user-profile.component.html
@@ -1,7 +1,7 @@
 <div class="w-full">
   <form [formGroup]="tutorProfileForm" class="flex flex-col gap-4">
     <div
-      class="w-full flex flex-col bg-surface rounded p-6 border border-solid border-light"
+      class="w-full flex flex-col bg-surface rounded p-6 border-2 border-solid border-light"
     >
       <div class="font-medium text-xl mb-3">
         {{ "TutorProfile.Basic" | translate }}
@@ -186,7 +186,7 @@
       </mat-form-field>
     </div>
     <div
-      class="w-full flex flex-col bg-surface rounded p-6 pb-2 border border-solid border-light"
+      class="w-full flex flex-col bg-surface rounded p-6 pb-2 border-2 border-solid border-light"
     >
       <div class="font-medium text-xl mb-3">
         {{ "TutorProfile.Introduction" | translate }}
@@ -196,7 +196,7 @@
         <textarea
           matInput
           cdkTextareaAutosize
-          cdkAutosizeMinRows="2"
+          cdkAutosizeMinRows="3"
           formControlName="introduction"
           placeholder="{{ 'TutorProfile.IntroductionDescription' | translate }}"
           maxlength="1000"
@@ -239,7 +239,7 @@
       </mat-form-field>
     </div>
     <div
-      class="w-full flex flex-col bg-surface rounded p-6 pb-2 border border-solid border-light"
+      class="w-full flex flex-col bg-surface rounded p-6 pb-2 border-2 border-solid border-light"
     >
       <div class="font-medium text-xl mb-3">
         {{ "TutorProfile.Teaching" | translate }}
@@ -325,7 +325,7 @@
       </mat-form-field>
     </div>
     <div
-      class="w-full flex flex-col bg-surface rounded p-6 pb-2 border border-solid border-light"
+      class="w-full flex flex-col bg-surface rounded p-6 pb-2 border-2 border-solid border-light"
     >
       <div class="font-medium text-xl mb-3">
         {{ "TutorProfile.Experience" | translate }}
@@ -357,7 +357,7 @@
         <div formArrayName="languages" class="flex flex-col gap-3">
           <div
             *ngFor="let language of languagesFormArray.controls; let i = index"
-            class="flex items-center flex-wrap md:flex-nowrap gap-x-3 rounded border border-base border-solid px-3 py-2 relative"
+            class="flex items-center flex-wrap md:flex-nowrap gap-x-3 rounded border-2 border-light border-solid px-3 py-2 relative"
             [formGroupName]="i"
           >
             <div class="flex-grow">
@@ -457,7 +457,7 @@
         </div>
         <div class="flex flex-col">
           <div
-            class="rounded border border-solid bg-surface border-base p-4 flex flex-col gap-2 items-center justify-center relative"
+            class="rounded border-2 border-solid bg-surface border-light p-4 flex flex-col gap-2 items-center justify-center relative"
             [ngClass]="
               isOnDropFilesContainer ? '!border-primary !bg-gray-50' : ''
             "
@@ -499,7 +499,7 @@
             *ngIf="this.tutorProfileForm.get('teachingCertificates')?.value"
           >
             <div
-              class="bg-surface rounded flex gap-4 items-center px-3 py-2 border border-solid border-base"
+              class="bg-surface rounded flex gap-4 items-center px-3 py-2 border-2 border-solid border-light"
               *ngFor="
                 let file of this.tutorProfileForm.get('teachingCertificates')
                   ?.value || [];
