update something new

--- a/src/material/_material-customs.scss
+++ b/src/material/_material-customs.scss
@@ -808,6 +808,7 @@ mat-stepper {
 /* ----------------------------------------------------------------------------------------------------- */
 .mat-dialog-container {
   padding: 0 !important;
+  margin: 0 16px;
 }
 
 /* ----------------------------------------------------------------------------------------------------- */
