--- a/src/app/modules/admin/users/user-profile-view/user-profile-view.component.html
+++ b/src/app/modules/admin/users/user-profile-view/user-profile-view.component.html
@@ -8,130 +8,231 @@
     </button>
   </div>
   <!-- Header -->
-  <div class="dialog__header"></div>
+  <div class="dialog__header">
+    <div class="text-2xl font-medium">{{ "User.UserProfile" | translate }}</div>
+  </div>
 
   <!-- Body -->
   <div class="dialog__body">
-    <div class="flex flex-col gap-4">
-      <div class="flex items-center gap-4 items-center mb-3">
-        <div
-          class="w-20 h-20 rounded-full overflow-hidden flex justify-center items-center font-medium bg-accent text-white uppercase text-2xl"
-        >
-          {{ "H" }}
-        </div>
-        <div class="flex flex-col">
-          <div class="text-lg font-medium text-primary">Hiep Nguyen</div>
-          <div class="text-tertiary font-medium">Tutor</div>
-        </div>
-      </div>
-      <div class="flex items-center gap-4">
-        <div class="font-medium">Email:</div>
-        <div class="text-tertiary">nguyenchinhhiep@gmail.com</div>
-      </div>
-      <div class="flex items-center gap-4">
-        <div class="font-medium">Date of birth:</div>
-        <div class="text-tertiary">10/03/1995</div>
-      </div>
-      <div class="flex items-center gap-4">
-        <div class="font-medium">Languages I teach:</div>
-        <div class="flex flex-wrap gap-3">
+    <ng-container *ngIf="userDetail.userType !== userType.Tutor">
+      <div class="flex flex-col gap-4">
+        <div class="flex items-center gap-4 items-center mb-3">
           <div
-            class="border border-rounded border-light rounded-full px-4 py-1 text-primary bg-hover"
+            class="w-20 h-20 rounded-full overflow-hidden flex justify-center items-center font-medium bg-accent text-white uppercase text-2xl"
           >
-            English
+            {{ "H" }}
+          </div>
+          <div class="flex flex-col">
+            <div class="text-lg font-medium">Hiep Nguyen</div>
+            <div class="text-tertiary">Tutor</div>
           </div>
         </div>
-      </div>
-      <div class="flex items-center gap-4">
-        <div class="font-medium">Languages I know:</div>
-        <div class="flex flex-wrap gap-3">
-          <div
-            class="border border-rounded border-light rounded-full px-4 py-1 text-primary bg-hover"
-          >
-            English - C1
+        <div class="flex items-center gap-4">
+          <div class="font-medium">Email:</div>
+          <div class="text-tertiary">nguyenchinhhiep@gmail.com</div>
+        </div>
+        <div class="flex items-center gap-4">
+          <div class="font-medium">
+            {{ "TutorProfile.DateOfBirth" | translate }}:
           </div>
-          <div
-            class="border border-rounded border-light rounded-full px-4 py-1 text-primary bg-hover"
-          >
-            Vietnamese - Native
+          <div class="text-tertiary">10/03/1995</div>
+        </div>
+        <div class="flex items-center gap-4">
+          <div class="font-medium">
+            {{ "TutorProfile.LanguagesITeach" | translate }}:
+          </div>
+          <div class="flex flex-wrap gap-3">
+            <div
+              class="border border-rounded border-light rounded-full px-4 py-1 text-accent bg-hover"
+            >
+              English
+            </div>
           </div>
         </div>
-      </div>
-      <div class="flex items-center gap-4">
-        <div class="font-medium">I teach:</div>
-        <div class="flex flex-wrap gap-3">
-          <div
-            class="border border-rounded border-light rounded-full px-4 py-1 text-primary bg-hover"
-          >
-            IELTS
+        <div class="flex items-center gap-4">
+          <div class="font-medium">
+            {{ "TutorProfile.LanguagesIKnow" | translate }}:
           </div>
-          <div
-            class="border border-rounded border-light rounded-full px-4 py-1 text-primary bg-hover"
-          >
-            TOEIC
-          </div>
-          <div
-            class="border border-rounded border-light rounded-full px-4 py-1 text-primary bg-hover"
-          >
-            Interview
-          </div>
-          <div
-            class="border border-rounded border-light rounded-full px-4 py-1 text-primary bg-hover"
-          >
-            Speaking
+          <div class="flex flex-wrap gap-3">
+            <div
+              class="border border-rounded border-light rounded-full px-4 py-1 text-accent bg-hover"
+            >
+              English - C1
+            </div>
+            <div
+              class="border border-rounded border-light rounded-full px-4 py-1 text-accent bg-hover"
+            >
+              Vietnamese - Native
+            </div>
           </div>
         </div>
-      </div>
-      <div class="flex items-center gap-4">
-        <div class="font-medium">Experience:</div>
-        <div class="text-tertiary">More than 2 years</div>
-      </div>
-      <div class="border-0 border-t border-solid border-light my-3"></div>
-      <div class="flex flex-col gap-2">
-        <div class="font-medium text-lg">Introduction</div>
-        <p class="text-tertiary leading-relaxed">
-          Hello, I've been teaching English since 2006, in Peru, Kazakhstan,
-          China, Ireland and Cambodia. I've taught all ages and all levels but
-          prefer teaching higher level adults. I like and am able to teach
-          grammar and I enjoy it when students ask me questions which make me
-          think ! My particular love with teaching is helping students go beyond
-          the daily communication, to learn more advanced topics and to help
-          people express more complex and deeper ideas and feelings. I enjoy
-          travelling and learning different cultures and languages. I also love
-          reading, walking and spending time in nature. I love working for
-          Lingoda because I meet all sorts of interesting and motivated students
-          from around the world and I love hearing everyone's experiences. I
-          look forward to meeting you and helping you with your language
-          learning goals.
-        </p>
-      </div>
-      <div class="border-0 border-t border-solid border-light my-3"></div>
-      <div class="flex flex-col gap-2">
-        <div class="font-medium text-lg">Certification</div>
-      </div>
-      <div class="border-0 border-t border-solid border-light my-3"></div>
-      <div class="flex flex-col gap-3">
-        <div class="font-medium text-lg">Motivation</div>
-        <div class="flex flex-col gap-1">
-          <div class="text-primary">Why do you want to tutor on Vietspeak?</div>
-          <p class="text-tertiary leading-relaxed">
+        <div class="flex items-center gap-4">
+          <div class="font-medium">
+            {{ "TutorProfile.ITeach" | translate }}:
+          </div>
+          <div class="flex flex-wrap gap-3">
+            <div
+              class="border border-rounded border-light rounded-full px-4 py-1 text-accent bg-hover"
+            >
+              IELTS
+            </div>
+            <div
+              class="border border-rounded border-light rounded-full px-4 py-1 text-accent bg-hover"
+            >
+              TOEIC
+            </div>
+            <div
+              class="border border-rounded border-light rounded-full px-4 py-1 text-accent bg-hover"
+            >
+              Interview
+            </div>
+            <div
+              class="border border-rounded border-light rounded-full px-4 py-1 text-accent bg-hover"
+            >
+              Speaking
+            </div>
+          </div>
+        </div>
+        <div class="flex items-center gap-4">
+          <div class="font-medium">
+            {{ "TutorProfile.Experience" | translate }}:
+          </div>
+          <div class="text-tertiary">More than 2 years</div>
+        </div>
+        <div class="border-0 border-t border-solid border-light my-3"></div>
+        <div class="flex flex-col gap-2">
+          <div class="font-medium text-lg">
+            {{ "TutorProfile.Introduction" | translate }}
+          </div>
+          <p class="text-secondary leading-loose">
             Hello, I've been teaching English since 2006, in Peru, Kazakhstan,
             China, Ireland and Cambodia. I've taught all ages and all levels but
             prefer teaching higher level adults. I like and am able to teach
             grammar and I enjoy it when students ask me questions which make me
             think ! My particular love with teaching is helping students go
             beyond the daily communication, to learn more advanced topics and to
-            help people express more complex and deeper ideas and feelings.
+            help people express more complex and deeper ideas and feelings. I
+            enjoy travelling and learning different cultures and languages. I
+            also love reading, walking and spending time in nature. I love
+            working for Lingoda because I meet all sorts of interesting and
+            motivated students from around the world and I love hearing
+            everyone's experiences. I look forward to meeting you and helping
+            you with your language learning goals.
           </p>
+          <iframe
+            class="mt-4 w-full"
+            height="350"
+            src="https://www.youtube.com/embed/tgbNymZ7vqY"
+          >
+          </iframe>
         </div>
-        <div class="flex flex-col gap-1">
-          <div class="text-primary">Where did you hear about Vietspeak?</div>
-          <p class="text-tertiary leading-relaxed">Web Search</p>
+        <div class="border-0 border-t border-solid border-light my-3"></div>
+        <div class="flex flex-col gap-2">
+          <div class="font-medium text-lg">
+            {{ "TutorProfile.Certification" | translate }}
+          </div>
+        </div>
+        <div class="border-0 border-t border-solid border-light my-3"></div>
+        <div class="flex flex-col gap-3">
+          <div class="font-medium text-lg">
+            {{ "TutorProfile.Motivation" | translate }}
+          </div>
+          <div class="flex flex-col gap-1">
+            <div class="text-accent">
+              {{ "TutorProfile.ReasonHere" | translate }}
+            </div>
+            <p class="text-secondary leading-loose">
+              Hello, I've been teaching English since 2006, in Peru, Kazakhstan,
+              China, Ireland and Cambodia. I've taught all ages and all levels
+              but prefer teaching higher level adults. I like and am able to
+              teach grammar and I enjoy it when students ask me questions which
+              make me think ! My particular love with teaching is helping
+              students go beyond the daily communication, to learn more advanced
+              topics and to help people express more complex and deeper ideas
+              and feelings.
+            </p>
+          </div>
+          <div class="flex flex-col gap-1">
+            <div class="text-accent">
+              {{ "OnBoarding.WhereHeardFrom" | translate }}
+            </div>
+            <p class="text-secondary leading-relaxed">Web Search</p>
+          </div>
         </div>
       </div>
-    </div>
+    </ng-container>
+    <ng-container *ngIf="userDetail.userType === userType.Student">
+      <div class="flex flex-col gap-4 w-full">
+        <div class="flex items-center gap-4 items-center mb-3">
+          <div
+            class="w-20 h-20 rounded-full overflow-hidden flex justify-center items-center font-medium bg-primary text-white uppercase text-2xl"
+          >
+            {{ "H" }}
+          </div>
+          <div class="flex flex-col">
+            <div class="text-lg font-medium">Hiep Nguyen</div>
+            <div class="text-tertiary">Student</div>
+          </div>
+        </div>
+        <div class="flex items-center gap-4">
+          <div class="font-medium">Email:</div>
+          <div class="text-tertiary">nguyenchinhhiep@gmail.com</div>
+        </div>
+
+        <div class="flex items-center gap-4">
+          <div class="font-medium">
+            {{ "StudentProfile.Learning" | translate }}:
+          </div>
+          <div class="flex flex-wrap gap-3">
+            <div
+              class="border border-rounded border-light rounded-full px-4 py-1 text-primary bg-hover"
+            >
+              English
+            </div>
+          </div>
+        </div>
+
+        <div class="flex items-center gap-4">
+          <div class="font-medium">
+            {{ "StudentProfile.Level" | translate }}:
+          </div>
+          <div class="flex flex-wrap gap-3">
+            <div
+              class="border border-rounded border-light rounded-full px-4 py-1 text-primary bg-hover"
+            >
+              Beginner
+            </div>
+          </div>
+        </div>
+
+        <div class="border-0 border-t border-solid border-light my-3"></div>
+        <div class="flex flex-col gap-3">
+          <div class="font-medium text-lg">
+            {{ "StudentProfile.SupplementalInfo" | translate }}
+          </div>
+
+          <div class="flex flex-col gap-1">
+            <div class="text-primary">
+              {{ "OnBoarding.WhereHeardFrom" | translate }}
+            </div>
+            <p class="text-secondary leading-relaxed">Web Search</p>
+          </div>
+        </div>
+      </div>
+    </ng-container>
   </div>
 
   <!-- Footer -->
-  <div class="dialog__footer"></div>
+  <div class="dialog__footer bg-hover">
+    <div class="w-full flex justify-end">
+      <button
+        type="button"
+        mat-flat-button
+        color="primary"
+        [matDialogClose]="undefined"
+      >
+        {{ "Action.Close" | translate }}
+      </button>
+    </div>
+  </div>
 </div>
