--- a/src/styles/scss/components/_dialog.scss
+++ b/src/styles/scss/components/_dialog.scss
@@ -21,20 +21,26 @@
     position: absolute;
     right: 0;
     top: 0;
-    padding: 16px 16px 0 0;
+    padding: 8px 16px 0 0;
   }
 
   &__header {
-    padding: 24px 64px 16px 24px;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    padding: 0 52px 0 24px;
   }
 
   &__body {
-    max-height: calc(100vh - 100px);
-    padding: 0 24px;
+    max-height: calc(100vh - 160px);
+    padding: 24px;
     overflow: auto;
   }
 
   &__footer {
-    padding: 16px 24px;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    padding: 0 24px;
   }
 }
