update something new

--- a/src/app/modules/admin/users/users.component.html
+++ b/src/app/modules/admin/users/users.component.html
@@ -89,7 +89,7 @@
         </mat-select>
       </mat-form-field>
       <button mat-button class="flex-shrink-0">
-        <div class="text-sm text-danger">{{ "Action.Clear" | translate }}</div>
+        <div class="text-sm text-danger">{{ "Action.Reset" | translate }}</div>
       </button>
     </div>
   </div>
