update something new

--- a/src/app/components/image-cropper/image-cropper.component.html
+++ b/src/app/components/image-cropper/image-cropper.component.html
@@ -41,7 +41,7 @@
 
   <!-- Footer -->
   <div class="dialog__footer">
-    <div class="flex gap-4 justify-end">
+    <div class="flex gap-4 w-full justify-end">
       <button
         mat-button
         [matDialogClose]="undefined"
