--- a/src/app/layout/layouts/admin/admin.component.html
+++ b/src/app/layout/layouts/admin/admin.component.html
@@ -1,5 +1,5 @@
 <div
-  class="w-full h-full overflow-hidden flex flex-col relative bg-primary-50 bg-opacity-80"
+  class="w-full h-full overflow-hidden flex flex-col relative bg-default"
 >
   <!-- Header -->
   <admin-header></admin-header>
