--- a/src/app/layout/layouts/tutor/tutor.component.html
+++ b/src/app/layout/layouts/tutor/tutor.component.html
@@ -1,4 +1,4 @@
-<div class="w-full h-full overflow-hidden flex flex-col relative bg-primary-50 bg-opacity-80">
+<div class="w-full h-full overflow-hidden flex flex-col relative bg-default">
   <!-- Header -->
   <tutor-header></tutor-header>
   <div class="flex-grow overflow-hidden">
