--- a/src/app/modules/admin/users/user-change-password/user-change-password.component.html
+++ b/src/app/modules/admin/users/user-change-password/user-change-password.component.html
@@ -5,7 +5,7 @@
     class="flex flex-col gap-4"
   >
     <div
-      class="w-full flex flex-col bg-surface rounded p-6 border-2 border-solid border-light"
+      class="w-full flex flex-col bg-surface rounded p-6 pb-2 border-2 border-solid border-light"
     >
       <div class="font-medium text-xl mb-3">
         {{ "ChangePassword.Title" | translate }}
@@ -111,26 +111,26 @@
           }}
         </mat-error>
       </mat-form-field>
-      <div class="flex justify-center">
-        <button
-          type="submit"
-          class="btn--lg w-full"
-          mat-flat-button
-          [color]="'primary'"
-          [disabled]="changePasswordForm.disabled"
-        >
-          <span *ngIf="!changePasswordForm.disabled">
-            {{ "Action.ChangePassword" | translate }}
-          </span>
+    </div>
+    <div class="flex justify-center">
+      <button
+        type="submit"
+        class="btn--lg w-full"
+        mat-flat-button
+        [color]="'primary'"
+        [disabled]="changePasswordForm.disabled"
+      >
+        <span *ngIf="!changePasswordForm.disabled">
+          {{ "Action.ChangePassword" | translate }}
+        </span>
 
-          <mat-progress-spinner
-            *ngIf="changePasswordForm.disabled"
-            [diameter]="24"
-            mode="indeterminate"
-          >
-          </mat-progress-spinner>
-        </button>
-      </div>
+        <mat-progress-spinner
+          *ngIf="changePasswordForm.disabled"
+          [diameter]="24"
+          mode="indeterminate"
+        >
+        </mat-progress-spinner>
+      </button>
     </div>
   </form>
 </div>
