--- a/src/app/modules/client/onboarding/congratulations/congratulations.component.html
+++ b/src/app/modules/client/onboarding/congratulations/congratulations.component.html
@@ -1,5 +1,5 @@
 <div
-  class="w-full min-h-full flex flex-col gap-10 items-center bg-primary-50 bg-opacity-80 relative px-4 justify-center"
+  class="w-full min-h-full flex flex-col gap-10 items-center bg-default relative px-4 justify-center"
 >
   <div
     class="w-full max-w-md sm:bg-surface p-8 py-10 sm:rounded sm:sm:border-2 border-solid border-light"
