--- a/src/material/_material-customs.scss
+++ b/src/material/_material-customs.scss
@@ -884,3 +884,93 @@ mat-stepper {
   @apply bg-hover #{!important};
   @apply border border-solid border-light #{!important};
 }
+
+/* ----------------------------------------------------------------------------------------------------- */
+/*  Mat tooltip
+/* ----------------------------------------------------------------------------------------------------- */
+.mat-tooltip {
+  font-size: 12px;
+}
+
+/* ----------------------------------------------------------------------------------------------------- */
+/*  @ Slide Toggle
+/* ----------------------------------------------------------------------------------------------------- */
+
+.mat-slide-toggle {
+  .mat-slide-toggle-bar {
+    width: 37px;
+    height: 20px;
+    border-radius: 10rem;
+    margin-right: 10px;
+
+    .mat-slide-toggle-thumb-container {
+      top: 2.5px;
+      left: 2px;
+      width: 15px;
+      height: 15px;
+    }
+
+    .mat-slide-toggle-thumb {
+      height: 15px;
+      width: 15px;
+      box-shadow: none;
+    }
+  }
+
+  // Checked
+  &.mat-checked {
+    .mat-slide-toggle-thumb-container {
+      transform: translate3d(calc(37px - 15px - 4px), 0, 0);
+    }
+  }
+
+  /* Small style */
+  &.mat-slide-toggle--sm {
+    .mat-slide-toggle-bar {
+      width: 30px;
+
+      .mat-slide-toggle-thumb-container {
+        top: 3px;
+        left: 3px;
+        width: 14px;
+        height: 14px;
+      }
+
+      .mat-slide-toggle-thumb {
+        height: 14px;
+        width: 14px;
+      }
+    }
+  }
+
+  // Checked
+  &.mat-slide-toggle--sm.mat-checked {
+    .mat-slide-toggle-thumb-container {
+      transform: translate3d(calc(30px - 14px - 6px), 0, 0);
+    }
+  }
+}
+
+.mat-slide-toggle.mat-checked .mat-slide-toggle-bar {
+  // background-color: rgba(var(--accent-500-rgb), 0.54) !important;
+
+  .mat-slide-toggle-thumb {
+    background-color: var(--on-accent-700) !important;
+  }
+}
+
+.mat-slide-toggle.mat-primary.mat-checked .mat-slide-toggle-bar {
+  // background-color: rgba(var(--primary-500-rgb), 0.54) !important;
+
+  .mat-slide-toggle-thumb {
+    background-color: var(--on-accent-700) !important;
+  }
+}
+
+.mat-slide-toggle.mat-warn.mat-checked .mat-slide-toggle-bar {
+  // background-color: rgba(var(--warn-500-rgb), 0.54) !important;
+
+  .mat-slide-toggle-thumb {
+    background-color: var(--on-warn-700) !important;
+  }
+}
