--- a/src/styles/scss/components/_dialog.scss
+++ b/src/styles/scss/components/_dialog.scss
@@ -33,12 +33,12 @@
 
   &__body {
     max-height: calc(100vh - 160px);
-    padding: 24px;
+    padding: 16px 24px;
     overflow: auto;
   }
 
   &__footer {
-    height: 60px;
+    height: 70px;
     display: flex;
     align-items: center;
     padding: 0 24px;
